# linear-agent

./: .env.example  .gitignore  AGENTS.md  AgentSpec.md  LICENSE  README.md  SESSION_SUMMARY.md  agent_actions.jsonl  deploy_linear_agent.py  package.json  pyproject.toml  requirements.txt  setup-linear-agent.sh
.github/workflows/: deploy-linear-agent.yml
agents/: __init__.py
agents/linear_agent/: __init__.py  agent_entrypoint.py  app.py  classification.py  coding_agents.py  config.py  connectors.py  core.py  github_client.py  linear_client.py  models.py  orchestrator.py  prioritization.py  routing.py  shaping.py
app/: __init__.py  config.py  main.py  security.py
app/agent_rotation/: service.py
app/github_sync/: auth.py  service.py
app/issue_management/: linear_client.py  service.py
app/models/: agent.py  github.py  linear.py
app/self_learning/: feedback_service.py  logging_service.py
config/: coding_agents.yaml  select_coding_agent
docs/: playbook.md
linear_agent/: __init__.py  backoff.py  cli.py  client.py  config.py  github_client.py  github_integration.py  health.py  linear_client.py  logging_utils.py  orchestrator.py  self_learning.py  storage.py
src/: index.ts  linear-client.ts  server.ts
src/config/: agent-config.ts  mcp-config.ts
src/prompts/: system-prompt.ts
tests/: __init__.py  test_agent.py  test_agent_rotation.py  test_client.py  test_coding_agents.py  test_config.py  test_core.py  test_github_client.py  test_github_sync.py  test_health.py  test_orchestrator.py  test_self_learning.py  test_storage.py  test_webhooks.py
(+20 files in other folders)
